--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "apiTest": "npx json-server ./data.json --watch --port 5000"
   },
   "eslintConfig": {
     "extends": "react-app"
