[test modify] RidingRecord Year

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "apiTest": "npx json-server ./data.json --watch --port 5000"
+    "apiTest": "npx json-server --watch ./db.json --routes ./routes.json --port 5000"
   },
   "eslintConfig": {
     "extends": "react-app"
