--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_GOOGLE_MAP_KEY=AIzaSyClA27v6a4Gi1JAbsImTxXRwH-jDb5XDaw
-REACT_APP_SERVER_URL=http://localhost:5000/api
+REACT_APP_SERVER_URL=http://54.145.82.27/api
