--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
+    "browser-image-compression": "^1.0.14",
     "chart.js": "^2.9.4",
     "moment": "^2.29.1",
     "react": "^16.14.0",
@@ -15,7 +16,7 @@
     "react-dom": "^16.14.0",
     "react-dropdown": "^1.9.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.4"
+    "react-scripts": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
