--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.14.0",
     "react-dropdown": "^1.9.0",
+    "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.0.5"
   },
