--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "apiTest": "npx json-server --watch ./db.json --routes ./routes.json --port 5000",
-    "deploy": "aws s3 sync ./build s3://my-riding"
+    "deploy": "react-scripts build && aws s3 sync ./build s3://my-riding"
   },
   "eslintConfig": {
     "extends": "react-app"
